virtualbox-ose (4.0.4-dfsg-1) UNRELEASED; urgency=low

  [ Felix Geyer ]
  * New upstream release.
  * Drop 30-kernel-2.6.38.diff, applied upstream.

  [ Patrick Winnertz ]
  * Add if statement around adduser to prevent failure in some cases.
    (Closes: #611604)

 -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 18 Feb 2011 14:45:17 +0100

virtualbox-ose (4.0.2-dfsg-1) unstable; urgency=low

  * New upstream release. (LP: #709027)
    - Ships with a manual and upstream changelog.
      (Closes: #483702, #541127; LP: #243782)
  * Adapt patches for new upstream version.
  * Add new required build-dependencies:
    default-jdk, genisoimage, makeself, texlive-fonts-extra,
    texlive-fonts-recommended, texlive-latex-extra, texlive-latex-recommended.
  * Set VBOX_JAVA_HOME to /usr/lib/jvm/default-java.
  * Add 28-no-selinux-fedora.patch so VirtualBox doesn't try to install
    selinux-fedora/vbox_x11.pp which is stripped by the dfsg-free target.
  * Update install files.
  * Add 29-fix-ftbfs-as-needed.patch to fix FTBFS with ld --as-needed.
  * Automatically generate the pixmap icon from png.
  * Fix the watch file.
  * Update man pages.
  * Support passing through USB 1.1 devices to virtual machines.
  * Update vdfuse for VirtualBox 4.
  * Make the kernel modules buildable with kernel 2.6.38-rc2. (LP: #705593)
    - Add 30-kernel-2.6.38.diff

 -- Felix Geyer <debfx-pkg@fobos.de>  Sat, 29 Jan 2011 20:13:14 +0100

virtualbox-ose (3.2.12-dfsg-1) unstable; urgency=low

  * New upstream release.
  * Drop 03-2.6.37.patch and 24-xserver-19-support.patch, applied upstream.

 -- Felix Geyer <debfx-pkg@fobos.de>  Thu, 02 Dec 2010 21:18:36 +0100

virtualbox-ose (3.2.10-dfsg-2) unstable; urgency=low

  * Added two patches from virtualbox-ose SVN/bug tracking to fix some
    issues with kernels > 2.6.36. (Closes: #604259)
  * Moved program to utilities where it belongs.
  * Fixed typo in desktop file

 -- Michael Meskes <meskes@debian.org>  Mon, 22 Nov 2010 12:28:19 +0100
