@@ -47,7 +47,7 @@ diff --git a/src/VBox/Additions/x11/Makefile.kmk b/src/VBox/Additions/x11/Makefi
  SUB_DEPTH = ../../../..
  include $(KBUILD_PATH)/subheader.kmk
  
-+ifn1of ($(XSERVER_VERSION), 70 71 13 14 15 16 17 18 19)
++ifn1of ($(XSERVER_VERSION), 13 14 15 16 17 18 19 110)
 + XSERVER_VERSION := 17
 +endif
 +
@@ -137,7 +137,15 @@ diff --git a/src/VBox/Additions/x11/vboxmouse/Makefile.kmk b/src/VBox/Additions/
  vboxmouse_drv_19_TEMPLATE = VBOXGUESTR3XORGMOD
  vboxmouse_drv_19_DEFS := $(vboxmouse_drv_70_DEFS) NO_ANSIC
  ## @todo replace $(VBOX_PATH_X11_ROOT)/xorg-server-1.6.0-local
-@@ -214,6 +204,14 @@ vboxmouse_drv_19_SOURCES = \
+@@ -217,7 +207,6 @@ vboxmouse_drv_19_SOURCES = \
+ #
+ # vboxmouse_drv_110
+ #
+-DLLS += vboxmouse_drv_110
+ vboxmouse_drv_110_TEMPLATE = VBOXGUESTR3XORGMOD
+ vboxmouse_drv_110_DEFS := $(vboxmouse_drv_70_DEFS) NO_ANSIC
+ ## @todo replace $(VBOX_PATH_X11_ROOT)/xorg-server-1.6.0-local
+@@ -234,6 +224,14 @@ vboxmouse_drv_110_SOURCES = \
  	vboxmouse_15.c
  
  
@@ -235,8 +243,16 @@ diff --git a/src/VBox/Additions/x11/vboxvideo/Makefile.kmk b/src/VBox/Additions/
  vboxvideo_drv_19_TEMPLATE = VBOXGUESTR3XORGMOD
  vboxvideo_drv_19_CFLAGS := $(vboxvideo_drv_70_CFLAGS)
  vboxvideo_drv_19_DEFS := $(vboxvideo_drv_15_DEFS)
-@@ -290,6 +280,23 @@ vboxvideo_drv_19_INCS = \
- vboxvideo_drv_19_SOURCES := $(vboxvideo_drv_15_SOURCES)
+@@ -293,7 +282,6 @@ vboxvideo_drv_19_SOURCES := $(vboxvideo_drv_15_SOURCES)
+ #
+ # vboxvideo_drv_110
+ #
+-DLLS += vboxvideo_drv_110
+ vboxvideo_drv_110_TEMPLATE = VBOXGUESTR3XORGMOD
+ vboxvideo_drv_110_CFLAGS := $(vboxvideo_drv_70_CFLAGS)
+ vboxvideo_drv_110_DEFS := $(vboxvideo_drv_15_DEFS)
+@@ -317,6 +306,23 @@ vboxvideo_drv_110_INCS = \
+ vboxvideo_drv_110_SOURCES := $(vboxvideo_drv_15_SOURCES)
  
  
 +vboxvideo_drv_$(XSERVER_VERSION)_NAME := vboxvideo_drv
